--- a/package.json
+++ b/package.json
@@ -9,13 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^4.12.0",
     "autoprefixer": "10.4.14",
+    "axios": "^1.3.5",
+    "classnames": "^2.3.2",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "formik": "^2.2.9",
     "next": "13.3.0",
     "postcss": "8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.1"
+    "react-hot-toast": "^2.4.0",
+    "tailwindcss": "3.3.1",
+    "yup": "^1.0.2"
+  },
+  "devDependencies": {
+    "prisma": "^4.12.0"
   }
 }
