--- a/package.json
+++ b/package.json
@@ -10,17 +10,21 @@
   },
   "dependencies": {
     "@prisma/client": "^4.12.0",
+    "@supabase/supabase-js": "^2.15.0",
     "autoprefixer": "10.4.14",
     "axios": "^1.3.5",
+    "base64-arraybuffer": "^1.0.2",
     "classnames": "^2.3.2",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "formik": "^2.2.9",
+    "nanoid": "^4.0.2",
     "next": "13.3.0",
     "postcss": "8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
+    "react-icons": "^4.8.0",
     "tailwindcss": "3.3.1",
     "yup": "^1.0.2"
   },
