--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.13",
+    "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.12.0",
     "@supabase/supabase-js": "^2.15.0",
     "autoprefixer": "10.4.14",
@@ -17,9 +19,13 @@
     "classnames": "^2.3.2",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "faunadb": "^4.8.0",
     "formik": "^2.2.9",
+    "handlebars": "^4.7.7",
     "nanoid": "^4.0.2",
     "next": "13.3.0",
+    "next-auth": "^4.22.0",
+    "nodemailer": "^6.9.1",
     "postcss": "8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
