added google auth

--- a/.env
+++ b/.env
@@ -22,3 +22,7 @@ EMAIL_FROM="no-reply@example.com"
 
 NEXTAUTH_SECRET="UxW11fkWj/iOnIuWLhYOJI/zcsoCHdn6sgA/HIb41nA="
 NEXTAUTH_URL="http://localhost:3000"
+
+// .env
+GOOGLE_ID="84362719303-7hhdn026j40snr03ngme3uc16su3k7tg.apps.googleusercontent.com"
+GOOGLE_SECRET="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"
