--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.12.0",
     "@supabase/supabase-js": "^2.15.0",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.3",
     "autoprefixer": "10.4.14",
     "axios": "^1.3.5",
     "base64-arraybuffer": "^1.0.2",
